--- a/.env
+++ b/.env
@@ -7,14 +7,14 @@ APP_FALLBACK_LOCALE=en
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_PORT=8889
+DB_PORT=3306
 DB_DATABASE=ppe
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=''
 
-CACHE_DRIVER=memcached
-SESSION_DRIVER=memcached
-QUEUE_DRIVER=database
+#CACHE_DRIVER=memcached
+#SESSION_DRIVER=memcached
+#UEUE_DRIVER=database
 
 # MAIL_DRIVER=smtp
 # MAIL_HOST=mailtrap.io
