--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=ppe
 DB_USERNAME=root
-DB_PASSWORD=''
+DB_PASSWORD=
 
 #CACHE_DRIVER=memcached
 #SESSION_DRIVER=memcached
